fixed horizontal scrolling

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,8 +1,5 @@
 .cards {
 	margin-top: 30px;
-	padding-left: 200px;
-	padding-right: 200px;
-	/* fonts */
 }
 
 .card__list {
