--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,10 +1,5 @@
 .header {
 	padding-top: 45px;
-}
-
-.header__line {
-	margin-top: 41px;
-	margin-bottom: 62px;
-	color: #545454;
-	opacity: 0.7;
+	border-bottom: 1px solid #545454;
+	padding-bottom: 41px;
 }
